2002-05-10  James Henstridge  <james@daa.com.au>

	* codegen/argtypes.py (StringArg.write_return): make this handler
	actually look at the ownsreturn argument.  This fixes a crasher
	when reading string type attributes (it was freeing the struct
	member!).

2002-05-09  James Henstridge  <james@daa.com.au>

	* gtk/gtkgl.defs: get rid of gtk_gl and gdk_gl prefix on some
	functions.

	* codegen/codegen.py (Wrapper.write_function_wrapper): pass
	caller_owns_return as argument to write_return.
	(Wrapper.write_getsets): add extra arg to write_return() call.

	* codegen/argtypes.py (*.write_return): add an extra "ownsreturn"
	argument to all write_return functions.

	* codegen/definitions.py (MethodDef.__init__): read a
	caller_owns_return variable.  It defaults to false if ommitted,
	unless we have a string return.
	(FunctionDef.__init__): same here, but also make
	caller_owns_return true for constructors.

2002-05-08  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (_wrap_gtk_tree_model_get_value): fix typo.  I
	should test these things before committing.

2002-05-05  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (gtk_tree_sortable_set_sort_func): implement.
	(gtk_tree_sortable_set_default_sort_func): implement.

	* gtk/compat.py: start of compatibility module.

	* gtk/gtk.override (_wrap_gtk_tree_model_foreach): fix up foreach
	handler.
	(_wrap_gtk_tree_model_get_iter): change to take a single argument
	as the path, as discussed in bug 75811.

2002-05-04  James Henstridge  <james@daa.com.au>

	* Makefile.am (EXTRA_DIST): add extra files to dist (from bug
	#79872).

	* gtk/gtk.defs (set_from_pixmap): allow NULL pointer passed for
	mask.

	* gtk/gtk.override (pygtk_tree_foreach_marshal): pass model, path
	and iter to the callback.
	(_wrap_gtk_tree_model_foreach): implement.

2002-04-29  Matt Wilson  <msw@redhat.com>

	* codegen/argtypes.py (ULongArg): implemented an argtype to handle
	guint32 (on 32 bit platformas) and gulong arguments such that