@@ -13660,6 +13660,7 @@
   (of-object "GtkTreeRowReference")
   (c-name "gtk_tree_row_reference_get_path")
   (return-type "GtkTreePath*")
+  (caller-owns-return #t)
 )
 
 (define-method valid
@@ -13788,6 +13789,7 @@
   (of-object "GtkTreeModel")
   (c-name "gtk_tree_model_get_path")
   (return-type "GtkTreePath*")
+  (caller-owns-return #t)
   (parameters
     '("GtkTreeIter*" "iter")
   )
@@ -13988,6 +13990,7 @@
   (of-object "GtkTreeModelSort")
   (c-name "gtk_tree_model_sort_convert_child_path_to_path")
   (return-type "GtkTreePath*")
+  (caller-owns-return #t)
   (parameters
     '("GtkTreePath*" "child_path")
   )
@@ -14007,6 +14010,7 @@
   (of-object "GtkTreeModelSort")
   (c-name "gtk_tree_model_sort_convert_path_to_child_path")
   (return-type "GtkTreePath*")
+  (caller-owns-return #t)
   (parameters
     '("GtkTreePath*" "child_path")
   )
