@@ -1,3 +1,10 @@
+2002-05-12  James Henstridge  <james@daa.com.au>
+
+	* codegen/argtypes.py (ObjectArg.write_return): add handler for
+	ownsreturn case for GObjects.
+	(BoxedArg.write_return): and for boxed types ...
+	(GtkTreePathArg.write_return): handle ownsreturn.
+
 2002-05-10  James Henstridge  <james@daa.com.au>
 
 	* codegen/argtypes.py (StringArg.write_return): make this handler
